# fast_api_curso

./: .gitignore  README.md  pyproject.toml
fast_api/: app.py  database.py  models.py  security.py
migrations/: env.py
migrations/versions/: 01094866fabe_create_updated_at_column.py  2a6475e80c83_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py
